--- a/color/index.htm
+++ b/color/index.htm
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="zh">
 
@@ -184,8 +183,8 @@
     </div>
   </div>
 
-  <script src="http://lib.sinaapp.com/js/jquery/1.9.1/jquery-1.9.1.min.js"></script>
-  <script src="javascripts/clipboard.js"></script>
+  <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.10/dist/clipboard.min.js"></script>
   <script>
     $(function() {
 
@@ -249,7 +248,7 @@
 
       (function() {
         // 复制到剪切板
-        var clipboard = new Clipboard('.group-9 div');
+        var clipboard = new ClipboardJS('.group-9 div');
 
         clipboard.on('success', function(e) {
           $tip.success();
@@ -305,4 +304,3 @@
 </body>
 
 </html>
-
